--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 
      <!-- my css -->
      <link rel=" stylesheet" href="style.css">
-  <title>RAYNOLD_SORO.</title>
+  <title>RAYNOLD_SOROO.</title>
   </head>
   <body>
      
