--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- jumbotrone start -->
     <section class="jumbotron text-center "> 
-        <img src="img/img.raso.jpg" alt=" raso" width="200"
+        <img src="img/img.raso.png" alt=" raso" width="200"
       class="rounded-circle img-thumbnail">
   <h1 class="display-3">Raynold Soro</h1>
   <p class="lead"> a Student</p> 
